# loco_form_test

./: Cargo.toml
src/controllers/: home.rs
tests/: mod.rs
tests/requests/: home.rs
tests/requests/snapshots/: can_post_home_form@home_request.snap  can_post_home_json@home_request.snap
